# Document-RAG-Chatbot

./: .gitignore  ARCHITECTURE.md  README.md  folder_watcher.py  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  chat.py  documents.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  document.py
app/schemas/: __init__.py  chat.py  document.py  query.py
app/services/: __init__.py  agent_service.py  embedding_service.py  gemini_service.py  pinecone_service.py  rag_service.py  sync_service.py  vector_store_service.py
app/utils/: __init__.py  chunking.py  file_reader.py
data/: company_handbook.json  hr_policy.json  internet_history.json
streamlit_app/: app.py
