[project]
name = "doc-rag"
version = "0.1.0"
description = "A document question-answering system that lets you upload text documents and ask questions about them. It uses retrieval-augmented generation (RAG) to ground answers in your actual data instead of making things up."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "numpy>=2.4.6",
    "pinecone>=9.1.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
